--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body {
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    overflow: hidden;
 }
+
 
 a {
     text-decoration: none;
