--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,30 @@ body {
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: rgba(202, 204, 206, 0.04);
+}
+
+body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: rgba(202, 204, 206, 0.04);;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #474c50;
+}
+
+
 
 
 a {
